# cinny-desktop

./: .gitignore  .gitmodules  0001-disable-tauri-updater.patch  README.md  config.json  package-lock.json  package.json
.github/: dependabot.yml  renovate.json
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: archive.yml  cla.yml  lockfile.yml  pr-title.yml  release.yml  tauri.yml  tauri2.yml  test.yml
.husky/: pre-commit
Casks/: cinny.rb
patches/: clipboard.patch
resources/: in.cinny.Cinny.desktop
scripts/: release.mjs  update-version.js  update-version.mjs
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: desktop.json  devtools.json  migrated.json  mobile.json
src-tauri/icons/: icon.icns
src-tauri/src/: clipboard.rs  lib.rs  link_handler.rs  main.rs  menu.rs  shortcuts.rs  tray.rs  tray_linux.rs
src-tauri/src/link_handler/: steam.rs
